# user-service

./: .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
app/: __init__.py  api_handler.py  exceptions.py  jwt_bearer.py  middlewares.py  settings.py
app/api/v1/: api.py
app/api/v1/routers/: roles_router.py  users_router.py
app/models/: jwt.py  role.py  user.py
app/models/request/: filters.py  register.py  role_requests.py  update_user.py  user_requests.py  validate_user.py
app/models/response/: error.py  role.py  user.py  users_page.py
app/repositories/: role_repository.py  user_repository.py
app/security/: authorization.py
app/services/: role_service.py  user_service.py
infrastructure/: api_gateway.tf  dynamodb.tf  iam.tf  lambda.tf  layer.tf  main.tf  ssm.tf  variables.tf
scripts/: build_api.sh  build_requirements_layer.sh  upload_api.sh  upload_requirements_layer.sh
tests/: conftest.py
tests/integration/: test_api_handler.py  test_role_api.py  test_user_api.py
tests/unit/repository/: test_role_repository.py  test_user_repository.py
tests/unit/service/: test_role_service.py  test_user_service.py
